# opendatasoft

./: .gitignore  2g_postcodes.sql  IMD.R  ODS-ORIGINAL-HOME-WECA-TRIAL-CSS.css  ODS-ORIGINAL-HOME-WECA-TRIAL-HTML.txt  ODS_api_demo.R  README.md  additional_styles_for_portal.css  afrs_wrangle.R  aqcontinuoussites.txt  aqdashboard.txt  aqdtubesites.txt  bduk-sample.sql  bec-energy-ods.R  built_up_areas.R  bwi_index_processor.R  code_snippets.txt  colours.R  commonwealth_photos.txt  cpf_pollinator_site_ods.r  custom-view-map-height.css  dumbell.R  elevation.R  export_epc_data_ods.R  food_api.R  food_hygiene_data_processing.md  food_hygiene_processor.R  fungi_prep.R  geography_lsoa.R  ghg_emissions_ods.sql  gis-data.R  h3.sql  heat_pump_ods_process.R  homepage-html.txt  html_code_for_portal_catalog_cards.txt  html_code_for_portal_footer,txt.txt  html_code_for_portal_header.txt  httr2-ods.R  image_processor.R  importODS.R  (+56 more)
docs/: MAINTENANCE.md  USAGE.md  api-patterns.md  components.md  generators.md  index.md  ods-explore-api-v2.md  tags.md  token_efficiency_report.txt  validation_report.txt  widgets_documentation.md
lg_inform_ods files/: CSS.txt  Connectrion String.txt  HTML.txt  danny_instructions.txt
lnrs-app/: lnrs-app-test.css  lnrs-app-test.html
lnrs-app/archive/: lnrs-app-text.css  lnrs-app-text.html  lnrs-area-map-css.txt  lnrs-area-map-html.txt  lnrs-retired-prod-version.html  lnrs-text-app-html.txt
